--- a/src/app/admin/project/views/template.modal.html
+++ b/src/app/admin/project/views/template.modal.html
@@ -1,7 +1,7 @@
 
 <div class="modal-header clearfix">
     <div class="modal-title pull-left">
-        <h4>Project Tempalte List</h4>
+        <h4>Project Template List</h4>
     </div>
 </div>
 
