--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -57,7 +57,7 @@
                                      <input type="checkbox" name="remember"> Remember Me
                                 </div>
                                 <div class="pull-right">
-                                    <button ui-sref="register" class="btn btn-warning">Register</button>
+                                    <a href="" ui-sref="register" class="btn btn-warning">Register</a>
                                     <input type="submit" ng-disabled="LoginForm.$invalid && vm.validated" value="Login" class="btn btn-primary">
                                 </div>
                             </div>
