--- a/src/app/user/task/views/list.html
+++ b/src/app/user/task/views/list.html
@@ -1,10 +1,10 @@
-    <pre ng-if="debug.user">
+<pre ng-if="debug.user">
     {{ vm.tasks  }}
 </pre>
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Pekerjaan</h1>
+            <h1 class="page-header">Routines</h1>
         </div>
     </div>
 
