--- a/src/app/user/project/views/list.html
+++ b/src/app/user/project/views/list.html
@@ -70,7 +70,7 @@
                                     -->
 	                                <td>
 	                                	<a ng-click="vm.detail(object.id)" class="btn btn-info btn-xs" popover="Detail" popover-trigger="mouseenter">
-	                                		<i class="fa fa-search"></i>
+	                                		<i class="fa fa-external-link"></i>
                                 		</a>
 	                                </td>
 	                            </tr>
